--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <h1>Neha Vinesh</h1>
-  <img src="../Desktop/IMG_2380.JPG" alt="Neha Vinesh">
+  <img src="IMG_2380.JPG" alt="Neha Vinesh">
   <hr>
   <h2>About Me</h2>
   <h4>
